final changes made