@@ -1,90 +1,101 @@
 package com.driver;
 
+import java.time.LocalDate;
 import java.util.*;
 
-public class Gmail extends Email {
-
-    HashSet<String>uniqueEmails = new HashSet<>();
-    ArrayList<Mail> inbox;
-    ArrayList<Mail> trash;
+public class Gmail extends Email
+{
     int inboxCapacity; //maximum number of mails inbox can store
     //Inbox: Stores mails. Each mail has date (Date), sender (String), message (String). It is guaranteed that message is distinct for all mails.
     //Trash: Stores mails. Each mail has date (Date), sender (String), message (String)
-    public Gmail(String emailId, int inboxCapacity) {
+    Deque<Mail>inbox;
+
+    //addLast ---> mail Addition..
+    //latest mail last asnar
+
+    //removeFirst()...
+    ArrayList<Mail>trash;
+    public Gmail(String emailId, int inboxCapacity)
+    {
         super(emailId);
-        this.inboxCapacity = inboxCapacity;
-        inbox = new ArrayList<>();
-        trash = new ArrayList<>();
+        this.inboxCapacity=inboxCapacity;
+        inbox=new LinkedList<>();
+        trash=new ArrayList<>();
+
     }
 
 
-    public void receiveMail(Date date, String sender, String message){
+
+    public void receiveMail(Date date, String sender, String message)
+    {
         // If the inbox is full, move the oldest mail in the inbox to trash and add the new mail to inbox.
         // It is guaranteed that:
         // 1. Each mail in the inbox is distinct.
+
         // 2. The mails are received in non-decreasing order. This means that the date of a new mail is greater than equal to the dates of mails received already.
-        if(!uniqueEmails.contains(super.getEmailId()))
+        if(inbox.size()==inboxCapacity)
         {
 
-            if(inbox.size() == inboxCapacity)
-            {
+            Mail mail=inbox.removeFirst();
+            trash.add(mail);
 
-                inbox.remove(0);
-
-                trash.add(new Mail(date,sender,message));
-            }
-            inbox.add(new Mail(date,sender,message));
-            uniqueEmails.add(super.getEmailId());
-
+            ///add last hoto..
         }
-
+        inbox.add(new Mail(date,sender,message));
 
     }
 
-    public void deleteMail(String message){
+    public void deleteMail(String message)
+    {
         // Each message is distinct
         // If the given message is found in any mail in the inbox, move the mail to trash, else do nothing
+
         for(Mail mail:inbox)
         {
-            String msg = mail.getMessage();
-            if(msg.equals(message))
+            if(mail.getMessage().equals(message)==true)
             {
                 trash.add(mail);
                 inbox.remove(mail);
+                break;
             }
         }
 
+
     }
 
-    public String findLatestMessage(){
+    public String findLatestMessage()
+    {
+        if(inbox.size()==0)return null;
         // If the inbox is empty, return null
         // Else, return the message of the latest mail present in the inbox
-        if(inbox.size()==0) return null;
-        Mail m = inbox.get(inbox.size()-1);
-        return m.getMessage();
+        Mail mail=inbox.getLast();
+        return mail.getMessage();
 
     }
 
     public String findOldestMessage(){
         // If the inbox is empty, return null
         // Else, return the message of the oldest mail present in the inbox
-        if(inbox.size()==0) return null;
-        Mail m = inbox.get(0);
-        return m.getMessage();
+
+        if(inbox.size()==0)return null;
+        Mail mail=inbox.getFirst();
+        return mail.getMessage();
 
     }
 
-    public int findMailsBetweenDates(Date start, Date end){
+    public int findMailsBetweenDates(Date start, Date end)
+    {
         //find number of mails in the inbox which are received between given dates
         //It is guaranteed that start date <= end date
-
-        int count = 0;
-        for(Mail mail : inbox)
+        int count=0;
+        for(Mail mail:inbox)
         {
-            if (mail.getDate().compareTo(start) >= 0 && mail.getDate().compareTo(end) <= 0) {
-                count++;
-             }
-          }
+            Date date=mail.getDate();
+            int compareStart=date.compareTo(start);
+            int compareEnd=date.compareTo(end);
+            if(compareEnd==0 || compareStart==0 || (compareStart>0 && compareEnd<0))count++;
+
+        }
         return count;
 
     }
@@ -97,42 +108,71 @@ public class Gmail extends Email {
 
     public int getTrashSize(){
         // Return number of mails in Trash
-       return trash.size();
+        return trash.size();
+
+
     }
 
-    public void emptyTrash(){
+    public void emptyTrash()
+    {
         // clear all mails in the trash
-       trash.clear();
+        trash=new ArrayList<>();
+
     }
 
     public int getInboxCapacity() {
         // Return the maximum number of mails that can be stored in the inbox
         return inboxCapacity;
     }
-
-
 }
+
 class Mail
 {
     private Date date;
     private String sender;
     private String message;
-
-    public Mail(Date date, String sender, String message) {
-        this.date = date;
-        this.sender = sender;
-        this.message = message;
+    public Mail(Date date,String sender,String message)
+    {
+        this.date=date;
+        this.sender=sender;
+        this.message=message;
     }
 
-    public Date getDate() {
+    public Date getDate()
+    {
         return date;
     }
 
-    public String getSender() {
+    public void setDate(Date date)
+    {
+        this.date = date;
+    }
+
+    public String getSender()
+    {
         return sender;
     }
 
-    public String getMessage() {
+    public void setSender(String sender)
+    {
+        this.sender = sender;
+    }
+
+    public String getMessage()
+    {
         return message;
+    }
+
+    public void setMessage(String message)
+    {
+        this.message = message;
+    }
+
+
+
+    @Override
+    public String toString()
+    {
+        return ""+date;
     }
 }
